# PDSD

./: README.md
DynStruct-lab_1/: CMakeLists.txt  Lab1_2_Antonov.cpp  SetLab1_2_Antonov.cpp  SetLab1_2_Antonov.h
DynStruct-lab_1/.cache/clangd/index/: Lab1_2_Antonov.cpp.1C8D17D5156B2B9B.idx  SetLab1_2_Antonov.cpp.E75B9ECF3B80F7C1.idx  SetLab1_2_Antonov.h.DB22BE70D8D83077.idx
DynamicStruct-Lab1/: CMakeLists.txt  Lab1_2_Antonov.cpp  Laboratornaya_rabota_1.docx  Laboratornaya_rabota_2.docx  SetLab1_2_Antonov.cpp  SetLab1_2_Antonov.h  compile_commands.json  main
DynamicStruct-Lab1/.cache/clangd/index/: Lab1_2_Antonov.cpp.75B56C3FC928728E.idx  SetLab1_2_Antonov.cpp.7427B1E8233ACCB6.idx  SetLab1_2_Antonov.h.24826538880C8C56.idx
DynamicStruct-Lab1/Lab1_2_Antonov.dSYM/Contents/: Info.plist
DynamicStruct-Lab1/Lab1_2_Antonov.dSYM/Contents/Resources/DWARF/: Lab1_2_Antonov
DynamicStruct_Lab3/: CMakeLists.txt  Laboratornaya_rabota_3.docx  OOP_Set_Antonov.cpp  SetLab3_Antonov.cpp  SetLab3_Antonov.h
DynamicStruct_Lab4/: CMakeLists.txt  Laboratornaya_rabota_4.docx  SetLab4_Antonov.cpp  Set_Cont_List.cpp
DynamicStruct_Lab5/: CMakeLists.txt  LR5.docx  SetLab5_Antonov.cpp  Set_Cont_Set_Antonov.cpp
